--- a/TODO.txt
+++ b/TODO.txt
@@ -4,14 +4,20 @@ Registration
 1. Server side should repeat all validation done on client side
 2. When performing server-side validation, how do we show errors?
 3. When performing server-side validation, populate the fields that passed validation (don't force the user to fill them again)
+
+3. Password is stored as text
 4. Once registration is successful, forward to the login page and show the email as loginId and password.
 5. Do we need to email user with login and password?
+
+Cancel
+===================================
+1. Cancel button doesnt reset fields (after we have submitted the form)
 
 
 Login
 ===================================
 1. Work on Login Page
-2. How will we remember that user is logged in
+2. How will we remember that user is logged in, session tracking
 3. How will be show that user is logged in
 4. Create a table to track login activity (Last logged in, times logged in etc)
 
