--- a/TODO.txt
+++ b/TODO.txt
@@ -1,21 +1,21 @@
-
-Registration
+DONE
 ===================================
 1. Server side should repeat all validation done on client side
 2. When performing server-side validation, how do we show errors?
 3. When performing server-side validation, populate the fields that passed validation (don't force the user to fill them again)
+4. Do we create 1 connection to DB or connection every time a Register/Login is called?
 
+
+Registration
+===================================
 3. Password is stored as text
 4. Once registration is successful, forward to the login page and show the email as loginId and password.
 5. Do we need to email user with login and password?
-
-Cancel
-===================================
-1. Cancel button doesnt reset fields (after we have submitted the form)
-
+6. Make sure we can see logs
 
 Login
 ===================================
+0. What is a filter servlet and how is it used for Auth?
 1. Work on Login Page
 2. How will we remember that user is logged in, session tracking
 3. How will be show that user is logged in
@@ -24,6 +24,11 @@ Login
 Logout
 ===================================
 How will logout work, should user manually be able to logout?
+
+Cancel
+===================================
+1. Cancel button doesn't reset fields (after we have submitted the form)
+
 
 
 Admin Page
